; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_storage_func.c_storage_id_is_myself.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_storage_func.c_storage_id_is_myself.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_use_storage_id = common dso_local global i64 0, align 8
@g_my_server_id_str = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @storage_id_is_myself(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i64, i64* @g_use_storage_id, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %12

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* @g_my_server_id_str, align 4
  %9 = call i64 @strcmp(i8* %7, i32 %8)
  %10 = icmp eq i64 %9, 0
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @is_local_host_ip(i8* %13)
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %6
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @is_local_host_ip(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
